# mesonet-dashboard

./: .gitignore  Dockerfile  README.md  calc_normals.R  get_pager_urls.py  one-pagers.json  rm_old_files.py
.github/workflows/: deploy-web.yml  gridmet-normals.yml  update-one-pagers.yml
R/: base_map.R  build-rmd-function.R  build_redirects.R  fao_etr.R  functions.R  index.Rmd  index.html  mesonet-basic-map.R  mesonet-build-meta-table.R  mesonet-build-rmd.R  mesonet-rebuild-rmd.R  mesonet-update.R  mesonet-update.R.save
app/: app.py  layout.py  layouts.py  pyproject.toml  scratch.py  test.json  test.py
app/assets/: base-styles.css  dashExtensions_default.js  gtag.js  test.css
app/libs/: .env  et_calc.py  get_data.py  globals.py  params.py  plot_satellite.py  plotting.py  tables.py
app/mdb/: __init__.py  app.py  appv2.py  layout.py  test.json  test.pickle  test.py  test2.json
app/mdb/assets/: base-styles.css  dropdown_styles.css  mt_counties.fgb
app/mdb/normals/: aceabsar_pet.csv  aceabsar_rmax.csv  aceabsar_tmmn.csv  aceabsar_tmmx.csv  acebigti_rmax.csv  acebigti_rmin.csv  acebozem_pet.csv  acebozem_rmax.csv  acebozem_rmin.csv  acebroad_pet.csv  acebroad_pr.csv  acebroad_tmmn.csv  acecoone_pr.csv  acecoone_rmin.csv  acecoone_tmmn.csv  acecrowa_pet.csv  acecrowa_rmax.csv  acecrowa_rmin.csv  acehavre_pet.csv  acehavre_tmmn.csv  acehavre_tmmx.csv  aceingom_rmax.csv  aceingom_rmin.csv  aceingom_tmmx.csv  acemelvi_rmin.csv  acemelvi_tmmn.csv  acemiles_rmin.csv  acemiles_tmmn.csv  acemiles_tmmx.csv  acemocca_pet.csv  acemocca_pr.csv  acemocca_rmax.csv  acemocca_tmmn.csv  aceoilmo_pr.csv  acesidne_pet.csv  acesidne_pr.csv  acesidne_tmmn.csv  acetosto_rmax.csv  arskeogh_pet.csv  arskeogh_pr.csv  (+270 more)
app/mdb/pages/: report.py
app/mdb/utils/: get_data.py  params.py  plot_derived.py  plot_satellite.py  plotting.py  tables.py  update.py
app/normals/: aceabsar_pr.csv  aceabsar_rmin.csv  aceabsar_srad.csv  aceabsar_vs.csv  acebigti_tmmn.csv  acebozem_pr.csv  acebozem_srad.csv  acebozem_tmmn.csv  acebozem_vs.csv  acebroad_rmin.csv  acebroad_srad.csv  acebroad_tmmx.csv  acebroad_vs.csv  acecoffe_pet.csv  acecoffe_rmax.csv  acecrowa_srad.csv  acecrowa_vs.csv  acehavre_rmax.csv  acehavre_srad.csv  acehavre_vs.csv  aceingom_pet.csv  aceingom_pr.csv  aceingom_srad.csv  aceingom_tmmn.csv  aceingom_vs.csv  acemelvi_pet.csv  acemelvi_pr.csv  acemelvi_rmax.csv  acemelvi_srad.csv  acemelvi_tmmx.csv  acemelvi_vs.csv  acemiles_srad.csv  acemiles_vs.csv  acemocca_rmin.csv  acemocca_srad.csv  acemocca_tmmx.csv  acemocca_vs.csv  aceoilmo_pet.csv  aceround_pr.csv  aceround_rmax.csv  (+303 more)
bash/: install_libs.sh
dash-react/: package-lock.json  package.json
data/mesonet_information/: logger_conversion_mesonet.csv  name_conversion_mesonet.csv
data/shp/: mt_counties.dbf  mt_counties.shp  mt_counties.shx
data/simple_map/: simple_mesonet_map.html  simple_mesonet_map_home.html
data/station_page/: aceabsar.html  acebozem.html  acebroad.html  acecrowa.html  acehavre.html  aceingom.html  (+99 more)
docs/: 404.html  index.html
normals/: aceashla_pet.csv  aceashla_pr.csv  aceashla_rmax.csv  aceashla_rmin.csv  aceashla_tmmn.csv  aceashla_tmmx.csv  aceaugus_pet.csv  aceaugus_pr.csv  aceaugus_rmax.csv  aceaugus_rmin.csv  aceaugus_tmmn.csv  aceaugus_tmmx.csv  acebarth_pet.csv  acebarth_pr.csv  acebarth_rmax.csv  acebarth_rmin.csv  acebarth_tmmn.csv  acebarth_tmmx.csv  acebeltn_pet.csv  acebeltn_pr.csv  acebeltn_rmax.csv  acebeltn_rmin.csv  acebeltn_tmmn.csv  acebeltn_tmmx.csv  acebento_pet.csv  acebento_pr.csv  acebento_rmax.csv  acebento_rmin.csv  acebento_tmmn.csv  acebento_tmmx.csv  acebigsa_pet.csv  acebigsa_pr.csv  acebigsa_rmax.csv  acebigsa_rmin.csv  acebigti_pet.csv  acebigti_pr.csv  acebigti_rmax.csv  acebigti_rmin.csv  acebigti_tmmn.csv  acebigti_tmmx.csv  (+761 more)
v2/app/: app.py  get_data.py  plotting.py  pyproject.toml  scratch.py  simply_app.py
v2/app/assets/: mesonet-styles.css  spc-custom-styles.css
v2/app/libs/: get_data.py  plotting.py  tables.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
(+384 files in other folders)
