[tool.poetry]
name = "dashboard-v2"
version = "0.1.0"
description = "Version 2 of the Montana Mesonet Dashboard"
authors = ["colinbrust <colin.brust@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dash = "^2.0.0"
pandas = "^1.4.0"
dash-daq = "^0.5.0"
requests = "^2.27.1"
aiohttp = "^3.8.1"
gunicorn = "^20.1.0"
nbformat = "^5.1.3"
Pillow = "^9.3.0"
dash-bootstrap-components = "^1.0.3"
uvicorn = "^0.17.6"
waitress = "^2.1.1"
pyjanitor = "^0.23.1"
python-dotenv = "^0.20.0"
mt-mesonet-satellite = {git = "https://github.com/colinbrust/mt-mesonet-satellite.git", rev = "main"}
dash-loading-spinners = "^1.0.0"
neo4j-driver = "^4.4.5"
importlib-resources = "^5.9.0"
scipy = "^1.9.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.7.0"
nbformat = "^5.1.3"
black = "^22.1.0"
matplotlib = "^3.5.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
