[tool.poetry]
name = "mdb"
version = "0.1.0"
description = "Version 2 of the Montana Mesonet Dashboard"
authors = ["colinbrust <colin.brust@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dash = "^2.0.0"
pandas = "^1.4.0"
dash-daq = "^0.5.0"
requests = "^2.27.1"
gunicorn = "^20.1.0"
Pillow = "^9.0.1"
dash-bootstrap-components = "^1.0.3"
pyjanitor = "^0.23.1"
python-dotenv = "^0.20.0"
mt-mesonet-satellite = {git = "https://github.com/colinbrust/mt-mesonet-satellite.git", rev = "main"}
dash-loading-spinners = "^1.0.0"
neo4j-driver = "^4.4.5"
importlib-resources = "^5.9.0"
scipy = "^1.9.1"
dash-mantine-components = "^0.12.1"
geojson = "^3.0.1"
dash-iconify = "^0.1.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.7.0"
nbformat = "^5.1.3"
black = "^22.1.0"
matplotlib = "^3.5.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "I001"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

fix = true
unfixable = ["F401"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]