[project]
name = "mdb"
version = "0.1.0"
description = "Version 2 of the Montana Mesonet Dashboard"
authors = [{ name = "colinbrust", email = "colin.brust@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "dash>=3,<4",
    "pandas>=2.0.0,<3",
    "dash-daq>=0.6.0,<1",
    "requests>=2.27.1,<3",
    "gunicorn>=23.0.0,<24",
    "Pillow>=11.0.0,<12",
    "dash-bootstrap-components>=2.0.0,<3",
    "python-dotenv>=1.0.0,<2",
    "mt-mesonet-satellite",
    "neo4j-driver>=4.4.5,<5",
    "importlib-resources>=5.9.0,<6",
    "dash-mantine-components>=1.0.0,<2",
    "geojson>=3.0.1,<4",
    "dash-ag-grid>=31.3.1",
    "polars>=1.31.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.7.0,<7",
    "matplotlib>=3.5.1,<4",
]

[tool.uv]

[tool.uv.sources]
mt-mesonet-satellite = { git = "https://github.com/mt-climate-office/mt-mesonet-satellite.git", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "I001"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

fix = true
unfixable = ["F401"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
