[tool.poetry]
name = "dashboard-v2"
version = "0.1.0"
description = "Version 2 of the Montana Mesonet Dashboard"
authors = ["colinbrust <colin.brust@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.0.0"
pandas = "^1.4.0"
dash-daq = "^0.5.0"
requests = "^2.27.1"
aiohttp = "^3.8.1"
gunicorn = "^20.1.0"
nbformat = "^5.1.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.7.0"
nbformat = "^5.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
